---
source: crates/sui-prover/tests/integration.rs
assertion_line: 268
expression: output
---
Verification successful


== Generated Boogie Code ==
function {:inline} $42_quantifiers_multiple_args_all_is_positive$pure(_$t0: int, _$t1: int, _$t2: int) returns ($ret0: bool)
{
    (var $t4 := 0;
    (var $t5 := (_$t0 >= $t4);
    (var $t6 := 0;
    (var $t7 := (_$t2 >= $t6);
    (var $t8 := 0;
    (var $t9 := (_$t1 >= $t8);
    (var $t10 := false;
    (var $t3 := $t10;
    (var $t11 := false;
    (var $t3 := $t11;
    (var $t12 := (if $t7 then $t9 else $t3);
    $t12)))))))))))
}
function {:inline} $42_quantifiers_multiple_args_is_greater_or_equal$pure(_$t0: int, _$t1: int, _$t2: int) returns ($ret0: bool)
{
    (var $t4 := (_$t1 >= _$t0);
    (var $t5 := (_$t1 >= _$t2);
    (var $t6 := false;
    (var $t7 := $t6;
    (var $t8 := (if $t4 then $t5 else $t7);
    $t8)))))
}
function {:inline} $42_quantifiers_multiple_args_sum3$pure(_$t0: int, _$t1: int, _$t2: int) returns ($ret0: int)
{
    (var $t3 := (_$t0 + _$t1);
    (var $t5 := ($t3 + _$t2);
    $t5))
}
